--- a/dotnet-wasm/template.yaml
+++ b/dotnet-wasm/template.yaml
@@ -1,4 +1,4 @@
-apiVersion: backstage.io/v1beta2
+apiVersion: scaffolder.backstage.io/v1beta3
 kind: Template
 metadata:
   name: dotnet7-wasm-template
@@ -12,70 +12,67 @@ spec:
   owner: user:guest
   type: service
 
-parameters:
-  - title: Provide component information
-    required:
-      - component_id
-      - owner
-    properties:
-      component_id:
-        title: name
-        type: string
-        description: Name of the WASM webapp
-      owner:
-        title: Owner
-        string: Owner of the component
-        ui:field: OwnerPicker
-        ui:options: 
-          - allowKinds: 
-            - Group
-  - title: Choose a location
-    required:
-      - repoUrl
-    properties:
-      repoUrl:
-        title: Repository Location
-        type: string
-        ui:field: RepoUrlPicker
-        ui:options:
-          allowedHosts:
-            - github.com
+  parameters:
+    - title: Provide component information
+      required:
+        - component_id
+        - owner
+      properties:
+        component_id:
+          title: name
+          type: string
+          description: Name of the WASM webapp
+        owner:
+          title: Owner
+          string: Owner of the component
+          ui:field: OwnerPicker
+          ui:options: 
+            - allowKinds: 
+              - Group
+    - title: Choose a location
+      required:
+        - repoUrl
+      properties:
+        repoUrl:
+          title: Repository Location
+          type: string
+          ui:field: RepoUrlPicker
+          ui:options:
+            allowedHosts:
+              - github.com
 
-steps:
-  # Each step executes an action, in this case one templates files into the working directory.
-  - id: fetch-base
-    name: Fetch Base
-    action: fetch:template
-    input:
-      url: ./content
-      values:
-        name: ${{ parameters.component_id }}
+  steps:
+    # Each step executes an action, in this case one templates files into the working directory.
+    - id: fetch-base
+      name: Fetch Base
+      action: fetch:template
+      input:
+        url: ./content
+        values:
+          name: ${{ parameters.component_id }}
 
-  # This step publishes the contents of the working directory to GitHub.
-  - id: publish
-    name: Publish
-    action: publish:github
-    input:
-      allowedHosts: ['github.com']
-      description: This is ${{ parameters.component_id }}
-      repoUrl: ${{ parameters.repoUrl }}
+    # This step publishes the contents of the working directory to GitHub.
+    - id: publish
+      name: Publish
+      action: publish:github
+      input:
+        allowedHosts: ['github.com']
+        description: This is ${{ parameters.component_id }}
+        repoUrl: ${{ parameters.repoUrl }}
 
-  # The final step is to register our new component in the catalog.
-  - id: register
-    name: Register
-    action: catalog:register
-    input:
-      repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
-      catalogInfoPath: '/catalog-info.yaml'
+    # The final step is to register our new component in the catalog.
+    - id: register
+      name: Register
+      action: catalog:register
+      input:
+        repoContentsUrl: ${{ steps['publish'].output.repoContentsUrl }}
+        catalogInfoPath: '/catalog-info.yaml'
 
-# Outputs are displayed to the user after a successful execution of the template.
-output:
-  links:
-    - title: Repository
-      url: ${{ steps['publish'].output.remoteUrl }}
-    - title: Open in catalog
-      icon: catalog
-      entityRef: ${{ steps['register'].output.entityRef }}
-
-
-
+  # Outputs are displayed to the user after a successful execution of the template.
+  output:
+    links:
+      - title: Repository
+        url: ${{ steps['publish'].output.remoteUrl }}
+      - title: Open in catalog
+        icon: catalog
+        entityRef: ${{ steps['register'].output.entityRef }}
