--- a/dotnet-wasm/catalog-info.yaml
+++ b/dotnet-wasm/catalog-info.yaml
@@ -2,8 +2,8 @@ apiVersion: backstage.io/v1alpha1
 kind: Component
 metadata:
   name: ${{values.component_id | dump}}
-  annotations:
-    github.com/project-slug: Stefan94V/test-backstage-templates
+  # annotations:
+  #   github.com/project-slug: Stefan94V/test-backstage-templates
 spec:
   type: service
   owner: user:guest
